--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@
 <!-- <app-login></app-login>
 <app-register></app-register> -->
 <div class="container">
-  <div class="col-md-6 mt-5">
+  <div class="m-5">
     <a class="btn btn-primary btn-md btn-block" [routerLink]="['login']" routerLinkActive="router-link-active" >Login</a>
     <a class="btn btn-primary btn-md btn-block" [routerLink]="['register']" routerLinkActive="router-link-active" >Register</a>
     <router-outlet></router-outlet>
